@@ -40,9 +40,6 @@ are:
 .IP "\-D"
 Raise the debug level.  Use this multiple times for additional details.
 
-.IP "\-f"
-Stay in the foreground for testing.
-
 .IP "\-h"
 Display the help text.
 
